--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
